--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "l"}]
 python = "^3.11.6"
 pandas = "^2.2.3"
 fastparquet = "^2024.11.0"
+loguru = "^0.7.3"
 
 
 [tool.poetry.group.dev.dependencies]
